# aLibTorch

./: .gitmodules  CMakeLists.txt  README.md  aLibTorchConfig.cmake
code/: CMakeLists.txt
code/include/: aLibTorch.h
code/include/aLibTorch/: image.h  pymodule.h  textfile.h  torchtype.h  tquat.h
code/src/: image.cpp  pymodule.cpp  textfile.cpp  torchtype.cpp  tquat.cpp
examples/: 01_mnist.cpp  02_dataloader.cpp  03_python.cpp  03_python.py  04_footcontact.cpp  05_training.cpp  06_tensorboard.cpp  06_test.cpp  07_tensorfk.cpp  CMakeLists.txt
